# uredir

./: CMakeLists.txt  README.md  x86-build.sh
src/: uredir.c  uredir.h  youdp.c
